--- a/template/Index.html
+++ b/template/Index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
-    <p>This is another para</p>
+    <p>This is not just an another para</p>
+    <h1>HELLO</h1>
 </body>
 </html>
