--- a/template/Index.html
+++ b/template/Index.html
@@ -6,7 +6,6 @@
     <title></title>
 </head>
 <body>
-    <p>This is not just an another para</p>
-    <h1>HELLO</h1>
+    <p>This is another para</p>
 </body>
 </html>
